# tree-sitter-btor2

./: Cargo.toml  grammar.js  package-lock.json  package.json
src/: grammar.json  node-types.json  parser.c
