[package]
name = "tree-sitter-btor2"
description = "btor2 grammar for the tree-sitter parsing library"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>"]
version = "0.1.0"
keywords = ["incremental", "parsing", "btor2"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-btor2"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
